Ensure error msg is visible (remove popup nature)

--- a/portal/src/app/volunteer/dashboard/subscribe-banner/component.scss
+++ b/portal/src/app/volunteer/dashboard/subscribe-banner/component.scss
@@ -19,6 +19,33 @@
   border-radius: 1rem;
   z-index: 101;
   text-align: center;
+
+  &.popup--error {
+    top: 0rem;
+    left: 0rem;
+    right: 0rem;
+    bottom: 0rem;
+    width: 100vw;
+    height: 100vh;
+    padding: 0.5rem 0.75rem;
+    box-shadow: none;
+    border-radius: 0rem;
+    overflow-y: scroll;
+  }
+
+  details {
+    margin-top: 1rem;
+
+    summary {
+      font-size: 1rem;
+      cursor: pointer;
+      max-width: max-content;
+    }
+
+    code {
+      font-family: monospace;
+    }
+  }
 }
 
 h2,
